[build-system]
requires = ["setuptools"]

[project]
name = "exclusionms"
dynamic = ["version"]
description = "Python package for working with exclusionms-api and exclusionms-streamlit"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
dependencies = [
    "intervaltree",
    "requests",
    "pydantic",
    "ujson",
    "matplotlib",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
home = "https://github.com/pgarrett-scripps/ExclusionMs.git"

[project.scripts]
stress_tester = "exclusionms.stress_tester:main"

[tool.setuptools.dynamic]
version = {attr = "exclusionms.__version__"}

[tool.pylint]
max-line-length = 120
fail-under = 9.5